// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`convertToAvro complex schema 1`] = `
Object {
  "doc": undefined,
  "fields": Array [
    Object {
      "default": undefined,
      "doc": "",
      "name": "articleNumber",
      "type": "string",
    },
    Object {
      "default": undefined,
      "doc": "",
      "name": "modelNumber",
      "type": "string",
    },
    Object {
      "default": undefined,
      "doc": "",
      "name": "articleDescription",
      "type": "string",
    },
    Object {
      "default": undefined,
      "doc": "",
      "name": "gender",
      "type": undefined,
    },
    Object {
      "default": undefined,
      "doc": "",
      "name": "brand",
      "type": undefined,
    },
    Object {
      "default": undefined,
      "doc": "",
      "name": "productType",
      "type": undefined,
    },
    Object {
      "default": undefined,
      "doc": "",
      "name": "ageGroup",
      "type": undefined,
    },
    Object {
      "doc": "",
      "name": "colorway",
      "type": Object {
        "fields": Array [
          Object {
            "default": undefined,
            "doc": "",
            "name": "name",
            "type": "string",
          },
          Object {
            "default": undefined,
            "doc": "",
            "name": "description",
            "type": "string",
          },
        ],
        "name": "colorway_record",
        "type": "record",
      },
    },
    Object {
      "doc": "",
      "name": "colors",
      "type": Object {
        "items": Object {
          "default": undefined,
          "doc": "",
          "name": "colors",
          "type": undefined,
        },
        "type": "array",
      },
    },
    Object {
      "doc": "",
      "name": "seasons",
      "type": Object {
        "items": Object {
          "default": undefined,
          "doc": "",
          "name": "seasons",
          "type": undefined,
        },
        "type": "array",
      },
    },
    Object {
      "doc": "",
      "name": "skus",
      "type": Object {
        "items": Object {
          "default": undefined,
          "doc": "",
          "name": "skus",
          "type": undefined,
        },
        "type": "array",
      },
    },
    Object {
      "doc": "",
      "name": "assets",
      "type": Object {
        "items": Object {
          "default": undefined,
          "doc": "",
          "name": "assets",
          "type": undefined,
        },
        "type": "array",
      },
    },
    Object {
      "default": undefined,
      "doc": "",
      "name": "catalog",
      "type": undefined,
    },
    Object {
      "doc": "",
      "name": "related",
      "type": Object {
        "items": Object {
          "default": undefined,
          "doc": "",
          "name": "related",
          "type": undefined,
        },
        "type": "array",
      },
    },
  ],
  "name": "main",
  "namespace": "http.localhost.3000.david.adidas.product.Article",
  "type": "record",
}
`;

exports[`convertToAvro converts enum 1`] = `
Object {
  "doc": undefined,
  "fields": Array [
    Object {
      "default": undefined,
      "doc": "",
      "name": "volume",
      "type": "float",
    },
    Object {
      "default": undefined,
      "doc": "",
      "name": "power",
      "type": "int",
    },
    Object {
      "doc": "",
      "name": "fuel",
      "type": Object {
        "name": "fuel_enum",
        "symbols": Array [
          "gasoline",
          "diesel",
          "lpg",
          "cng",
        ],
        "type": "enum",
      },
    },
  ],
  "name": "main",
  "namespace": "http.supermodel.io.factory.parts.Engine",
  "type": "record",
}
`;

exports[`convertToAvro converts inline object in property 1`] = `
Object {
  "doc": undefined,
  "fields": Array [
    Object {
      "default": undefined,
      "doc": "",
      "name": "manufacturer",
      "type": "string",
    },
    Object {
      "default": undefined,
      "doc": "",
      "name": "type",
      "type": "string",
    },
    Object {
      "default": undefined,
      "doc": "",
      "name": "weight",
      "type": "int",
    },
    Object {
      "default": undefined,
      "doc": "",
      "name": "length",
      "type": "float",
    },
    Object {
      "default": undefined,
      "doc": "",
      "name": "available",
      "type": "boolean",
    },
    Object {
      "doc": "",
      "name": "engine",
      "type": Object {
        "fields": Array [
          Object {
            "default": undefined,
            "doc": "",
            "name": "volume",
            "type": "float",
          },
          Object {
            "default": undefined,
            "doc": "",
            "name": "power",
            "type": "int",
          },
        ],
        "name": "engine_record",
        "type": "record",
      },
    },
  ],
  "name": "main",
  "namespace": "http.supermodel.io.factory.Car",
  "type": "record",
}
`;

exports[`convertToAvro converts required property 1`] = `
Object {
  "doc": undefined,
  "fields": Array [
    Object {
      "default": undefined,
      "doc": "",
      "name": "manufacturer",
      "type": "string",
    },
    Object {
      "default": undefined,
      "doc": "",
      "name": "type",
      "type": "string",
    },
    Object {
      "default": undefined,
      "doc": "",
      "name": "weight",
      "type": "int",
    },
    Object {
      "default": undefined,
      "doc": "",
      "name": "length",
      "type": "float",
    },
    Object {
      "default": undefined,
      "doc": "",
      "name": "available",
      "type": "boolean",
    },
  ],
  "name": "main",
  "namespace": "http.supermodel.io.factory.Car",
  "type": "record",
}
`;

exports[`convertToAvro multiple definitions in root #2 1`] = `
Object {
  "doc": undefined,
  "fields": Array [],
  "name": "main",
  "namespace": undefined,
  "type": "record",
}
`;

exports[`convertToAvro multiple definitions in root 1`] = `
Object {
  "doc": undefined,
  "fields": Array [],
  "name": "main",
  "namespace": undefined,
  "type": "record",
}
`;

exports[`convertToAvro resolves refs by #/ 1`] = `
Object {
  "doc": undefined,
  "fields": Array [
    Object {
      "default": undefined,
      "doc": "",
      "name": "manufacturer",
      "type": "string",
    },
    Object {
      "default": undefined,
      "doc": "",
      "name": "type",
      "type": "string",
    },
    Object {
      "default": undefined,
      "doc": "",
      "name": "weight",
      "type": "int",
    },
    Object {
      "default": undefined,
      "doc": "",
      "name": "length",
      "type": "float",
    },
    Object {
      "default": undefined,
      "doc": "",
      "name": "available",
      "type": "boolean",
    },
    Object {
      "default": undefined,
      "doc": "",
      "name": "engine",
      "type": undefined,
    },
  ],
  "name": "main",
  "namespace": "http.supermodel.io.factory.Car",
  "type": "record",
}
`;

exports[`convertToAvro resolves refs by id 1`] = `
Object {
  "doc": undefined,
  "fields": Array [
    Object {
      "default": undefined,
      "doc": "",
      "name": "manufacturer",
      "type": "string",
    },
    Object {
      "default": undefined,
      "doc": "",
      "name": "type",
      "type": "string",
    },
    Object {
      "default": undefined,
      "doc": "",
      "name": "weight",
      "type": "int",
    },
    Object {
      "default": undefined,
      "doc": "",
      "name": "length",
      "type": "float",
    },
    Object {
      "default": undefined,
      "doc": "",
      "name": "available",
      "type": "boolean",
    },
    Object {
      "default": undefined,
      "doc": "",
      "name": "engine",
      "type": undefined,
    },
  ],
  "name": "main",
  "namespace": "http.supermodel.io.factory.Car",
  "type": "record",
}
`;

exports[`convertToAvro resolves refs by relative path 1`] = `
Object {
  "doc": undefined,
  "fields": Array [
    Object {
      "default": undefined,
      "doc": "",
      "name": "manufacturer",
      "type": "string",
    },
    Object {
      "default": undefined,
      "doc": "",
      "name": "type",
      "type": "string",
    },
    Object {
      "default": undefined,
      "doc": "",
      "name": "weight",
      "type": "int",
    },
    Object {
      "default": undefined,
      "doc": "",
      "name": "length",
      "type": "float",
    },
    Object {
      "default": undefined,
      "doc": "",
      "name": "available",
      "type": "boolean",
    },
    Object {
      "default": undefined,
      "doc": "",
      "name": "engine",
      "type": undefined,
    },
  ],
  "name": "main",
  "namespace": "http.supermodel.io.factory.Car",
  "type": "record",
}
`;

exports[`convertToAvro resolves refs works with nested ref objects 1`] = `
Object {
  "doc": undefined,
  "fields": Array [
    Object {
      "default": undefined,
      "doc": "",
      "name": "manufacturer",
      "type": undefined,
    },
    Object {
      "default": undefined,
      "doc": "",
      "name": "type",
      "type": "string",
    },
    Object {
      "default": undefined,
      "doc": "",
      "name": "weight",
      "type": "int",
    },
    Object {
      "default": undefined,
      "doc": "",
      "name": "length",
      "type": "float",
    },
    Object {
      "default": undefined,
      "doc": "",
      "name": "available",
      "type": "boolean",
    },
    Object {
      "default": undefined,
      "doc": "",
      "name": "engine",
      "type": undefined,
    },
  ],
  "name": "main",
  "namespace": "http.supermodel.io.factory.Car",
  "type": "record",
}
`;

exports[`convertToAvro simple type 1`] = `
Object {
  "doc": "Order model description",
  "fields": Array [
    Object {
      "default": undefined,
      "doc": "",
      "name": "timestamp",
      "type": undefined,
    },
  ],
  "name": "main",
  "namespace": "http.supermodel.io.david.Order",
  "type": "record",
}
`;
